--- a/package.json
+++ b/package.json
@@ -22,13 +22,6 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "ejs": "^2.5.5",
@@ -36,5 +29,8 @@
     "gulp-babel": "^6.1.2",
     "gulp-less": "^3.3.0",
     "gulp-plumber": "^1.1.0"
+  },
+  "devDependencies": {
+    "http": "0.0.0"
   }
 }
