--- a/db/path_config.json
+++ b/db/path_config.json
@@ -48,6 +48,18 @@
     "image":"",
     "gist":"小程序是一种不需要下载安装即可使用的应用，它实现了应用“触手可及”的梦想，用户扫一扫或者搜一下即可打开应用。也体现了“用完即走”的理念，用户不用关心是否安装太多应用的问题。"
   },
+  "report_2016": {
+    "key": "report_2016",
+    "fileName": "2016年工作总结",
+    "createTime": 1483920000000,
+    "path": "report_2016.md",
+    "author": "司南泰坦",
+    "tags":["必要商城"],
+    "subTitle": "盘点我在必要商城掺和过的那些项目",
+    "contents": "",
+    "image":"",
+    "gist":"余自去年3月份以实习生身份进入必要前端组，至今已有半年以上的时间。进入年底，有必要将我在公司做过的工作进行总结，以期对自身工作有客观全面的分析，亦对明年工作有所帮助"
+  },
   "test_demo": {
     "key": "test_demo",
     "fileName": "欢迎使用马克飞象",
