--- a/db/path_config.json
+++ b/db/path_config.json
@@ -98,7 +98,7 @@
       "日常学习"
     ],
     "author": "司南",
-    "subTitle": "充分利用手机阅读APP进行日常英语学习",
+    "subTitle": "充分利用手机APP进行英语学习",
     "gist": "到底踏马哒如何才能提高自己英语水平",
     "contents": ""
   },
