--- a/db/path_config.json
+++ b/db/path_config.json
@@ -100,7 +100,8 @@
     "author": "司南",
     "subTitle": "充分利用手机APP进行英语学习",
     "gist": "到底踏马哒如何才能提高自己英语水平",
-    "contents": ""
+    "contents": "",
+	"image":"https://github.com/SinanJS/react-blog/blob/master/public/images/xuexi.jpg?raw=true"
   },
   "test_demo": {
     "key": "test_demo",
